# horned-owl

./: .gitignore  .pre-commit-config.yaml  .travis.yml  Cargo.toml  Makefile  README.md  bikepath.md  branch.org  contribute.md  releases.md  roadmap.md  swrl_rules_redesign.md
.github/workflows/: rust.yml
benches/: example.rs  horned.rs  io.rs  model.rs
benches/ont/: o10.owx  o100.owl  o100.owx  o1000.owx  o10000.owx  o2500.owx  o5000.owx  pizza.owl
dev/: go-short.owl  not-rfc.sh  untracked-files.sh
doc/: roadmap.org
horned-bin/: Cargo.toml  README.md  lib.rs
horned-bin/src/: lib.rs
horned-bin/tests/: test_horned_materialize.rs  test_horned_parse.rs  test_horned_round.rs
profile/: profile-go
src/: adaptor.rs  collection.rs  command.rs  curie.rs  error.rs  index.rs  io.rs  lib.rs  main.rs  model.rs  normalize.rs  resolve.rs  visitor.rs  vocab.rs
src/grammars/: bcp47.pest  ofn.pest  omn.pest  rfc3987.pest  sparql.pest
src/io/: mod.rs  reader.rs  writer.rs
src/io/ofn/: mod.rs
src/io/omn/: mod.rs  reader.rs
src/io/owx/: mod.rs  reader.rs  writer.rs
src/io/rdf/: closure_reader.rs  mod.rs  reader.rs  reader2.rs  reader3.rs  writer.rs
src/ont/: Makefile  README  declaration-with-annotation.xml  o10.owl  one-and.xml  one-annotation-property.xml  one-class-broken.xml  one-class.xml  one-label.xml  one-or.xml  one-some.xml  simple-ont.xml  subproperty-chain.xml  transitive-properties.xml  two-class-with-some.xml
src/ont/bubo/: Makefile  and-complex.clj  and.clj  annotation-domain.clj  annotation-on-complex-subclass.clj  annotation-on-equivalent-classes.clj  annotation-on-subclass.clj  annotation-on-transitive.clj  annotation-property.clj  annotation-range.clj  annotation-with-annotation.clj  annotation-with-anonymous.clj  annotation-with-non-builtin-annotation.clj  annotation.clj  annotation_assertion.clj  anon-subobjectproperty.clj  class-assertion.clj  class.clj  class_with_two_annotations.clj  comment.clj  complex-equivalent-classes.clj  data-exact-cardinality.clj  data-has-key.clj  data-has-value.clj  data-max-cardinality.clj  data-min-cardinality.clj  data-only.clj  data-property-assertion.clj  data-property-disjoint.clj  data-property-domain.clj  data-property-equivalent.clj  data-property-functional.clj  data-property-range.clj  data-property-sub.clj  data-property.clj  data-some.clj  data-unqualified-exact.clj  datatype-alias.clj  datatype-complement.clj  datatype-intersection.clj  (+93 more)
src/ont/owl-functional/: and-complex.ofn  and.ofn  annotation-domain.ofn  annotation-on-complex-subclass.ofn  annotation-on-equivalent-classes.ofn  annotation-on-subclass.ofn  annotation-on-transitive.ofn  annotation-property.ofn  annotation-range.ofn  annotation-with-annotation.ofn  annotation-with-anonymous.ofn  annotation-with-non-builtin-annotation.ofn  annotation.ofn  annotation_assertion.ofn  anon-subobjectproperty.ofn  class-assertion.ofn  class.ofn  class_with_two_annotations.ofn  comment.ofn  complex-equivalent-classes.ofn  data-exact-cardinality.ofn  data-has-key.ofn  data-has-value.ofn  data-max-cardinality.ofn  data-min-cardinality.ofn  data-only.ofn  data-property-assertion.ofn  data-property-disjoint.ofn  data-property-domain.ofn  data-property-equivalent.ofn  data-property-functional.ofn  data-property-range.ofn  data-property-sub.ofn  data-property.ofn  data-some.ofn  data-unqualified-exact.ofn  datatype-alias.ofn  datatype-complement.ofn  datatype-intersection.ofn  datatype-oneof.ofn  (+87 more)
src/ont/owl-manchester/: and-complex.omn  and.omn  annotation-domain.omn  annotation-on-complex-subclass.omn  annotation-on-equivalent-classes.omn  annotation-on-subclass.omn  annotation-on-transitive.omn  annotation-property.omn  annotation-range.omn  annotation-with-annotation.omn  annotation-with-non-builtin-annotation.omn  annotation.omn  annotation_assertion.omn  anon-subobjectproperty.omn  class-assertion.omn  class.omn  class_with_two_annotations.omn  comment.omn  complex-equivalent-classes.omn  data-exact-cardinality.omn  data-has-key.omn  data-has-value.omn  data-max-cardinality.omn  data-min-cardinality.omn  data-only.omn  data-property-assertion.omn  data-property-disjoint.omn  data-property-domain.omn  data-property-equivalent.omn  data-property-functional.omn  data-property-range.omn  data-property-sub.omn  data-property.omn  data-some.omn  data-unqualified-exact.omn  datatype-alias.omn  datatype-complement.omn  datatype-intersection.omn  datatype-oneof.omn  datatype-union.omn  (+78 more)
src/ont/owl-rdf/: and-complex.owl  and.owl  annotation-domain.owl  annotation-iri.owl  annotation-on-complex-subclass.owl  annotation-on-equivalent-classes.owl  annotation-on-subclass.owl  annotation-on-transitive.owl  annotation-property.owl  annotation-range.owl  annotation-with-annotation.owl  annotation-with-anonymous.owl  annotation-with-non-builtin-annotation.owl  annotation.owl  annotation_assertion.owl  anon-subobjectproperty.owl  anonymous-annotation-value.owl  anonymous_individual.owl  class-assertion.owl  class.owl  class_with_two_annotations.owl  comment.owl  (+137 more)
src/ontology/: axiom_mapped.rs  component_mapped.rs  declaration_mapped.rs  indexed.rs  iri_mapped.rs  logically_equal.rs  mod.rs  set.rs  simple.rs
src/resolve/: mod.rs
src/tmp-bin/: horned_big.rs  horned_dump.rs  horned_round.rs  horned_temp.rs  horned_triples.rs  horned_unparsed.rs
src/visitor/: immutable.rs  mod.rs  mutable.rs
tests/: test_horned_materialize.rs  test_horned_parse.rs  test_horned_round.rs
(+391 files in other folders)
