[package]
name = "horned-owl"
version = "0.12.1-alpha.0"
authors = ["Phillip Lord <phillip.lord@russet.org.uk>"]
description = "Library and Command Line tools for OWL Ontologies"

repository = "https://github.com/phillord/horned-owl"

keywords = ["xml", "ontology", "OWL", "command"]
categories = ["command-line-utilities", "parsing",
              "rendering", "science", "data-structures"]

license = "LGPL-3.0"
edition = "2018"

[dependencies]
curie = "0.1.1"
clap = "2.31.2"
enum_meta = "0.6.0"
thiserror = "1.0"
lazy_static="1.4.0"
log = {version="0.4.8"}
quick-xml={version="0.22.0"}
indexmap="1.0.2"
rio_api="0.6.1"
rio_xml="0.6.1"
pretty_rdf="0.1.2"
##pretty_rdf={path="./pretty_rdf"}
ureq={version="2.1.1", optional=true}

[features]
remote = ["ureq"]

[dev-dependencies]
horned-owl = {path=".", features = ["remote"]}
assert_cmd = "2.0.2"
bencher = "0.1.4"
env_logger = "0.9.0"
mktemp = "0.4.1"
predicates = "2.1.0"
pretty_assertions = "1.0.0"
slurp = "1.0.1"

[profile.release]
debug = true

[[bin]]
name = "horned"
path = "src/bin/horned.rs"

[[bin]]
name = "horned-big"
path = "src/bin/horned_big.rs"

[[bin]]
name = "horned-compare"
path = "src/bin/horned_compare.rs"

[[bin]]
name = "horned-dump"
path = "src/bin/horned_dump.rs"

[[bin]]
name = "horned-materialize"
path = "src/bin/horned_materialize.rs"

[[bin]]
name = "horned-parse"
path = "src/bin/horned_parse.rs"

[[bin]]
name = "horned-round"
path = "src/bin/horned_round.rs"

[[bin]]
name = "horned-summary"
path = "src/bin/horned_summary.rs"

[[bin]]
name = "horned-triples"
path = "src/bin/horned_triples.rs"

[[bin]]
name = "horned-unparsed"
path = "src/bin/horned_unparsed.rs"


[[bench]]
name = "horned"
harness = false
