[package]
name = "horned-owl"
version = "0.13.1-alpha"
authors = ["Phillip Lord <phillip.lord@russet.org.uk>"]
description = "Library for OWL Ontologies"

repository = "https://github.com/phillord/horned-owl"

keywords = ["xml", "ontology", "OWL", "command"]
categories = ["command-line-utilities", "parsing",
              "rendering", "science", "data-structures"]

license = "LGPL-3.0"
edition = "2018"

[dependencies]
curie = "0.1.1"
enum_meta = "0.6.0"
thiserror = "1.0"
lazy_static="1.4.0"
log = {version="0.4.8"}
quick-xml={version="0.26.0"}
indexmap="1.0.2"
rio_api="0.7.1"
rio_xml="0.7.3"
pretty_rdf="0.2.0"
##pretty_rdf={path="./pretty_rdf"}
ureq={version="2.1.1", optional=true}

[workspace]
members=["horned-bin"]

[features]
remote = ["ureq"]

[dev-dependencies]
horned-owl = {path=".", features = ["remote"]}
assert_cmd = "2.0.2"
bencher = "0.1.4"
env_logger = "0.9.0"
mktemp = "0.4.1"
predicates = "2.1.0"
pretty_assertions = "1.0.0"
slurp = "1.0.1"

[profile.release]
debug = true

[[bench]]
name = "horned"
harness = false
