[package]
name = "horned-bin"
version = "1.0.0"

authors = ["Phillip Lord <phillip.lord@russet.org.uk>"]
description = "Command Line tools for OWL Ontologies"

repository = "https://github.com/phillord/horned-owl"

keywords = ["xml", "ontology", "OWL", "command"]
categories = ["command-line-utilities", "parsing",
              "rendering", "science", "data-structures"]

license = "LGPL-3.0"
edition = "2018"

[dependencies]
clap = "3.2.2"
horned-owl={path="../", version= "1.0.0" }
indexmap={workspace=true}
pretty_rdf={workspace=true}
rio_api={workspace=true}
rio_xml={workspace=true}

[dev-dependencies]
assert_cmd = "2.0.2"
predicates = "2.1.0"


[[bin]]
name = "horned"
path = "src/bin/horned.rs"

[[bin]]
name = "horned-big"
path = "src/bin/horned_big.rs"

[[bin]]
name = "horned-compare"
path = "src/bin/horned_compare.rs"

[[bin]]
name = "horned-dump"
path = "src/bin/horned_dump.rs"

[[bin]]
name = "horned-materialize"
path = "src/bin/horned_materialize.rs"

[[bin]]
name = "horned-parse"
path = "src/bin/horned_parse.rs"

[[bin]]
name = "horned-round"
path = "src/bin/horned_round.rs"

[[bin]]
name = "horned-summary"
path = "src/bin/horned_summary.rs"

[[bin]]
name = "horned-triples"
path = "src/bin/horned_triples.rs"

[[bin]]
name = "horned-unparsed"
path = "src/bin/horned_unparsed.rs"
